--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </section>
     <!--------------------------------ICONOS-WRAPPER------------------------------->
     <div class="icons-wrapper">
-        <div class="row atajos container-center">
+        <div class="row atajos container-icons">
             <div class="row numbers margin-icons">
                 <div class="col-md-4">
                     <a href="https://www.argentina.gob.ar/jst/aviacion">
